--- a/js/styles.css
+++ b/js/styles.css
@@ -90,7 +90,7 @@ h2{
 .container {
     font-family: Arial, Helvetica, sans-serif;
 	width: 300px;
-	height: 350px;
+	height: 358px;
 	border-radius: 10px;
 	background-color: white;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -114,6 +114,7 @@ h2{
 	color: snow;
 	font-size: 20px;
 	text-align: center;
+    margin-left: 5%;
 }
 .leaderboard .head h1 {
 	display: inline-block;
