--- a/js/styles.css
+++ b/js/styles.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
 }
 
-#ayuda {
+#restaurar {
     font-family:Arial, Helvetica, sans-serif;
     background: rgba(0, 56, 121, 0.596);
     color: #ffffff;
