--- a/js/styles.css
+++ b/js/styles.css
@@ -89,9 +89,9 @@ h2{
 .container {
     font: 16px/1.2 "Roboto", sans-serif;
 	width: 300px;
-	height: 358px;
+	height: auto;
 	border-radius: 10px;
-	background-color: white;
+	background-color: #181c26;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	position: absolute;
 	top: 50%;
